# hw3-carly-tran

./: .gitignore  Makefile  ai_documentation.txt  index.md  myst.yml  pyproject.toml  toc.yml
ligotools/: utils.py  utils.py.save
ligotools.egg-info/: PKG-INFO
ligotools/tests/: test_readligo.py  test_utils.py
